# audacity-from-svn-5GB

./: BugLists.md  Downloads.md  ProjectHome.md  README.md
audacity-src/junk-branches/Audacity_1_3_5-Camp_Jam/audacity-src/: README.txt  bugs.txt  configure.in
sf-cvs/branches/audacity-0_9-branch/audacity-old/: AButton.cpp  APalette.cpp  ASlider.cpp  ASlider.h  AboutDialog.cpp  AboutDialog.h  Audacity.h  AudacityApp.cpp  AudacityApp.h  AudioIO-OSX.cpp  AudioIO.cpp  BlockFile.cpp  BlockFile.h  Bounce.cpp  DirManager.cpp  DirManager.h  Envelope.cpp  Export.cpp  ExportMP3.cpp  ExportOGG.cpp  FreqWindow.cpp  Help.cpp  Import.cpp  ImportMP3.cpp  ImportOGG.cpp  ImportPCM.h  ImportRaw.cpp  Makefile.OSX  Makefile.in  Menus.cpp  Menus.h  Mix.cpp  Prefs.cpp  Project.cpp  Project.h  README.txt  Tags.cpp  Track.cpp  Track.h  TrackArtist.cpp  (+13 more)
sf-cvs/tags/Before_SampleFormat/audacity-src/: configure.in
sf-cvs/tags/audacity-1_1/audacity-src/: configure  configure.in
sf-cvs/tags/version-0-8/audacity-old/: AudioDoc.h  FFTMisc.cpp  Import.h  Landmark.h  PlayLinux.cpp  configure.in
sf-cvs/trunk/audacity-old/: AButton.cpp  AButton.h  AColor.cpp  AColor.h  APalette.cpp  APalette.h  ASlider.cpp  ASlider.h  AStatus.cpp  AStatus.h  AboutDialog.cpp  AboutDialog.h  Audacity.h  AudacityApp.cpp  AudacityApp.h  AudioApp.cpp  AudioIO.cpp  AudioIO.h  AutoCorrelate.cpp  Benchmark.cpp  BlockFile.cpp  BlockFile.h  Bounce.cpp  Bounce.h  DirManager.cpp  DirManager.h  DiskFunctions.cpp  DiskFunctions.h  Envelope.cpp  Envelope.h  Export.cpp  Export.h  ExportMP3.cpp  ExportMP3.h  ExportPCM.cpp  ExportPCM.h  FFT.cpp  FFT.h  FileFormats.h  Fourier.h  (+66 more)
sf-cvs/trunk/audacity-old/allegro/: allegro.cpp  allegro.h  allegrowr.cpp  mfallegro.cpp  mfmidi.cpp
sf-cvs/trunk/audacity-old/effects/: AEffect.h  Amplify.cpp  Amplify.h  AudioEffect.hpp  BassBoost.cpp  BassBoost.h  Compressor.cpp  Compressor.h  Echo.cpp  Echo.h  Effect.cpp  Effect.h  Fade.cpp  Fade.h  Filter.cpp  Filter.h  LoadVSTMac.cpp  LoadVSTMac.h  LoadVSTWin.cpp  LoadVSTWin.h  NoiseRemoval.cpp  NoiseRemoval.h  Phaser.cpp  Phaser.h  VSTEffect.cpp  VSTEffect.h  Wahwah.cpp  Wahwah.h  audioeffectx.h  vstgui.h
sf-cvs/trunk/audacity-old/help/: audacity.hhc  audacity.hhk  credits.htm  exportmp3.htm  fileformats.htm  intro.htm  menu1.htm  menu2.htm  menu3.htm  menu4.htm  menu5.htm  menus.htm  prefs.htm  toolbar.htm  tour.htm  tracks.htm  unique.htm
sf-cvs/trunk/audacity-old/icons/: AudacitySmall.XPM
sf-cvs/trunk/audacity-old/id3lib/: NEWS  THANKS  configure.in  mkinstalldirs
sf-cvs/trunk/audacity-old/mp3/: mpg123.h  mpglib.h
sf-cvs/trunk/audacity-old/mpeg3/: global_config  mpeg3atrack.h
sf-cvs/trunk/audacity-old/prefs/: AudioIOPrefs.cpp  AudioIOPrefs.h  DirectoriesPrefs.cpp  DirectoriesPrefs.h  FileFormatPrefs.cpp  FileFormatPrefs.h  PrefsDialog.cpp  PrefsDialog.h  PrefsPanel.h  SampleRatePrefs.cpp  SampleRatePrefs.h  SpectrumPrefs.cpp  SpectrumPrefs.h
sf-cvs/trunk/audacity-old/res/: audacity.rc
sf-cvs/trunk/audacity-old/snd/: audio.h  audiomac.c  audiomac.h  audiooss.c  audiowin32.c  snd.c  snd.h  snd.htm  sndconfig.h  sndcvt.c  sndheader.c  sndio.c  sndmac.c  sndwin32.c
sf-cvs/trunk/audacity-old/xpm/: Aqua.xpm  Arrow.xpm  AudacityLogo.xpm  Palette.xpm
sf-cvs/trunk/audacity-src/: .cvsignore  LICENSE.txt  Makefile.in  README.txt  acinclude.m4  audacity.dox  bugs.txt  configure  configure.in  todo.txt
sf-cvs/trunk/audacity-src/dox2-src/: CrossPlatform.dox2  ShuttleSystem.dox2  Themability.dox2  WidgetMigration.dox2
sf-cvs/trunk/audacity-src/help/: audacity.1  contents.htm  credits.htm  faq.htm
sf-cvs/trunk/audacity-src/images/: Arrow.xpm  AudacityLogoWithName.xpm  ControlButtons.h  EditButtons.h  Palette.xpm  ToolsButtons.h  TranscriptionButtons.h
sf-cvs/trunk/audacity-src/locale/: Makefile  Makefile.in  af.po  ar.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  ga.po  hi.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lt.po  mk.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  tg.po  (+5 more)
sf-cvs/trunk/audacity-src/m4/: audacity_checklib_libsbsms.m4  audacity_checklib_libsndfile.m4  audacity_checklib_libsoundtouch.m4  audacity_checklib_libtwolame.m4  audacity_checklib_libvamp.m4  audacity_checklib_slv2.m4
sf-cvs/trunk/audacity-src/mac/: Info.plist  audacity.mcp  audacity.r  compile.txt  configmac.h  wxMac-2.4.1.patch  wxMac-2.8.9.patch
sf-cvs/trunk/audacity-src/nyquist/: dspprims.lsp  fileio.lsp  misc.lsp  nyinit.lsp  nyqmisc.lsp  nyquist.lsp  printrec.lsp  sal-parse.lsp  sal.lsp  seqmidi.lsp  sndfnint.lsp  system.lsp  test.lsp  xm.lsp
sf-cvs/trunk/audacity-src/plug-ins/: SilenceMarker.ny  analyze.ny  beat.ny  clicktrack.ny  clipfix.ny  crossfadein.ny  delay.ny  equalabel.ny  highpass.ny  lowpass.ny  pluck.ny  rissetdrum.ny  tremolo.ny  vocoder.ny
sf-cvs/trunk/audacity-src/qa/: Plugins.txt
sf-cvs/trunk/audacity-src/scripts/: mac_release_build  mailman-discard.pl  makeindex.pl  maketarball  maketarball.sh  mkdmg  pipe-test.pl
sf-cvs/trunk/audacity-src/src/: .cvsignore  AColor.cpp  AColor.h  APalette.cpp  APalette.h  AStatus.cpp  AStatus.h  AboutDialog.cpp  AboutDialog.h  AllThemeResources.h  Audacity.h  AudacityApp.cpp  AudacityApp.h  AudacityFileHistory.cpp  AudacityFileHistory.h  AudacityHeaders.h  AudioIO.cpp  AudioIO.h  AutoRecovery.cpp  AutoRecovery.h  BatchCommandDialog.cpp  BatchCommandDialog.h  BatchCommands.cpp  BatchCommands.h  BatchProcessDialog.cpp  BatchProcessDialog.h  Benchmark.cpp  BlockFile.cpp  BlockFile.h  ControlToolBar.cpp  ControlToolBar.h  Dependencies.cpp  Dependencies.h  DirManager.cpp  DirManager.h  DiskFunctions.cpp  DiskFunctions.h  Dither.cpp  Dither.h  EditToolBar.cpp  (+138 more)
sf-cvs/trunk/audacity-src/tests/: Makefile.in  SequenceTest.cpp  SimpleBlockFileTest.cpp
sf-cvs/trunk/audacity-src/win/: audacity.dsp  audacity.dsw  audacity.iss  audacity.rc  audacity.sln  audacity.vcproj  audacity_unicode.iss  compile.txt  configwin.h  help.vcproj  locale.vcproj  portaudio.h  release.txt  sandbox.txt
(+15389 files in other folders)
